// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Tabs Compact 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hANpeK StyledTabs-sc-a4fwxl-2 eCNyif sc-hZFzCs dWIRre sc-cHPgQl ewVPQt"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eNZVFp StyledTabs__StyledTabsHeader-sc-a4fwxl-0 gzVA-ds"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gGQLRY StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 lomFID"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iJWFLQ StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 KSWwC"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iJWFLQ StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 KSWwC"
            >
              Tab 3
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iJWFLQ StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 KSWwC"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iJWFLQ StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 KSWwC"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iJWFLQ StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 KSWwC"
            >
              And this is a third very long tab name testing
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-sc-a4fwxl-1 bAjdlD"
        role="tabpanel"
      >
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf dvzGBf"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hANpeK StyledTabs-sc-a4fwxl-2 eCNyif sc-hZFzCs dPnJWL sc-cHPgQl ewVPQt"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eNZVFp StyledTabs__StyledTabsHeader-sc-a4fwxl-0 gzVA-ds"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gGQLRY StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 lomFID"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iJWFLQ StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 KSWwC"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iJWFLQ StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 KSWwC"
            >
              Tab 3
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-sc-a4fwxl-1 bAjdlD"
        role="tabpanel"
      >
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf dvzGBf"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs With Long Titles 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hANpeK StyledTabs-sc-a4fwxl-2 eCNyif sc-hZFzCs dPnJWL sc-cHPgQl ewVPQt"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eNZVFp StyledTabs__StyledTabsHeader-sc-a4fwxl-0 gzVA-ds"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gGQLRY StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 lomFID"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iJWFLQ StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 KSWwC"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 cNUNma"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iJWFLQ StyledTab-sc-1nnwnsb-0 jxpJMm"
          >
            <span
              class="StyledText-sc-1sadyjn-0 KSWwC"
            >
              And this is a third very long tab name
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="This is a very long tab name Tab Contents"
        class="StyledTabs__StyledTabPanel-sc-a4fwxl-1 bAjdlD"
        role="tabpanel"
      >
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf dvzGBf"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;
